# psi-co-mAFiA

./: .gitattributes  README.md  pyproject.toml
RODAN/: basecall.py  models.py
example_data/input/: HSPA1A.bed
example_data/input/fast5_HSPA1A/: batch0.fast5
example_data/output/: aligned.bam  aligned.bam.bai  mAFiA.reads.bam  mAFiA.reads.bam.bai  mAFiA.sites.bed  relabelled.mAFiA.reads.bam  relabelled.mAFiA.reads.bam.bai  rodan.fasta
mAFiA/: arg_parsers.py  feature_classifiers.py  feature_extractors.py  mAFiA_pileup.py  mAFiA_process_reads_parallel.py
utils/: generate_mod_sites_from_ref.py
